# loopy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
prompts/evaluator/: 001-evaluate.md
prompts/implementer/: 001-implement.md
prompts/post-hooks/: 001-doc-gardening.md
prompts/reviewer/: 001-review.md
src/loopy/: __init__.py  adapters.py  cli.py  contracts.py  prompts.py  runner.py  state.py
